/*
plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.7'
	id 'io.spring.dependency-management' version '1.1.0'
}
 */

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'hamilton108'
version = '1.3.0'
sourceCompatibility = '21'

repositories {
	mavenCentral()
}

dependencies {
	implementation project(':vega')
	//implementation 'org.springframework.boot:spring-boot-starter-amqp'
	//implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	//implementation 'org.springframework.data:spring-data-redis:3.1.0'
	implementation 'redis.clients:jedis:5.1.3'
	implementation 'org.jsoup:jsoup:1.17.2'
	//implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	implementation 'org.htmlunit:htmlunit:4.2.0'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
	runtimeOnly 'org.postgresql:postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	//testImplementation 'org.springframework.amqp:spring-rabbit-test'
}

tasks.named('test') {
	useJUnitPlatform()
}


sourceSets {
	integration {
		java {
			compileClasspath += sourceSets.main.output + sourceSets.test.output
			runtimeClasspath += sourceSets.main.output + sourceSets.test.output
			//srcDir file("src/integration/java")
		}
		//resources.srcDir file("src/integration/resources")
	}
}

tasks.register('integrationTest', Test) {
	description = "Run integration tests"
	group = "verification"
	testClassesDirs = sourceSets.integration.output.classesDirs
	classpath = sourceSets.integration.runtimeClasspath
	systemProperty('spring.profiles.active', 'integration')
}

configurations {
	integrationImplementation.extendsFrom(testImplementation)
	integrationRuntimeOnly.extendsFrom(testRuntimeOnly)
}

/*
idea {
	module {
		testSourceDirs += sourceSets.integration.java.srcDirs
		testResourceDirs += sourceSets.integration.resources.srcDirs
		//scopes.TEST.plus += [ configurations.integrationImplementation ]
	}
}
 */

tasks.named('integrationTest') {
	useJUnitPlatform()
}
